# aaron2

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  PRD.md  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  alembic.ini  pyproject.toml  supervisord.conf
backend/alembic/: env.py
backend/alembic/versions/: fba0c05f67e5_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  redis.py  security.py
backend/app/models/: __init__.py  ai.py  base.py  food_log.py  health.py  meal_plan.py  pantry.py  receipt.py  recipe.py  shopping.py  user.py
backend/app/schemas/: ai.py  common.py  food_log.py  health.py  meal_plan.py  pantry.py  receipt.py  recipe.py  shopping.py  user.py
backend/app/services/: ai_service.py  coach_service.py  health_service.py  meal_plan_service.py  nutrition_service.py  receipt_parser.py  recipe_service.py  shopping_service.py
backend/app/tasks/: __init__.py  replenishment.py
backend/tests/: conftest.py
backend/tests/test_api/: conftest.py  test_auth.py  test_coach.py  test_food_log.py  test_health.py  test_health_check.py  test_meal_plans.py  test_pantry.py  test_recipes.py  test_shopping_lists.py
backend/tests/test_core/: test_config.py  test_security.py
backend/tests/test_schemas/: test_common_schemas.py  test_food_log_schemas.py  test_health_schemas.py  test_pantry_schemas.py  test_user_schemas.py
backend/tests/test_services/: test_ai_service.py  test_coach_service.py  test_health_service.py  test_nutrition_service.py  test_receipt_parser.py  test_replenishment.py  test_shopping_service.py
(+60 files in other folders)
